--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="images/sijia.png" alt="Temp" width="130px" />&nbsp;</td>
-<td align="left"><p>Associate Professor, <a href="https://www.cse.msu.edu/">Department of Computer Science and Engineering</a>,<br />
+<td align="left"><p>Red Cedar Distinguished Associate Professor, <a href="https://www.cse.msu.edu/">Department of Computer Science and Engineering</a>,<br />
 <a href="https://msu.edu/">Michigan State University</a>, East Lansing, MI 48824<br />
 <a href="https://mitibmwatsonailab.mit.edu/people/sijia-liu/">Affiliated Professor@IBM Research, MIT-IBM Watson AI Lab affiliated PI</a>, Cambridge, MA 02142<br /> 
 
