--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@ ICML’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* Dr. Liu is named <b>Red Cedar Distinguished Professor</b>!</p>
 <p>* We released the <a href="/pdf/recruitment/Welcome2OPTML.pdf">Welcome2OPTML Booklet</a> as a detailed introduction to our lab and an open invitation for strong prospective candidates to join us in 2026!</p>
 <p>* Congrats to OPTML on three papers accepted at NeurIPS 2025! One spotlight and two posters, covering LLM unlearning, interpretability, and security on reasoning models!</p>
 <p>* Congrats to Changsheng, Yihua, and Jinghan on their paper acceptance at the 18th ACM Workshop on Artificial Intelligence and Security (AISec).</p>
