--- a/index.html
+++ b/index.html
@@ -69,20 +69,31 @@ Interested candidates are strongly encouraged to contact me by <a href="mailto:l
 </li>
 </ul>
 <h2>Research Interests</h2>
-<p>My research spans the areas of machine learning (ML)/deep learning (DL), optimization, computer vision, security, signal processing and data science, 
-with a focus on developing learning algorithms and theory, and robust and explainable artificial intelligence (AI). 
-These research themes provide a solid foundation for reaching my <b>long-term research objective: Making AI systems safe and scalable</b>. 
-As AI moves from the lab into the real world (e.g., autonomous vehicles), ensuring its safety becomes a paramount requirement prior to 
-its deployment. Moreover, as datasets, ML/DL models, and learning tasks become increasingly complex, 
-getting ML/DL to scale calls for new advances in learning algorithm design.
-Thus, robustness and scalability  underscore my current and future research, and of course, these two goals are intertwined.  
-More  broadly,  the  study  towards robust and scalable AI could make a significant impact on machine learning theories, 
-and induce more promising applications in, e.g., automated ML, meta-learning, privacy and security, hardware design, and big data analysis. 
-I intend to seek a new learning frontier when the current learning algorithms become infeasible, and formalize  foundations  of  secure  learning.</p>
+
+<p>
+  <a href="pdf/recruitment/Welcome2OPTML.pdf" target="_blank" class="ri-photo">
+    <img src="images/cover_img.png" alt="OPTML @ MSU" />
+  </a>
+  My research spans the areas of machine learning (ML)/deep learning (DL), optimization, computer vision, security,
+  signal processing and data science, with a focus on developing learning algorithms and theory, and robust and
+  explainable artificial intelligence (AI). These research themes provide a solid foundation for reaching my
+  <b>long-term research objective: Making AI systems safe and scalable</b>. As AI moves from the lab into the real
+  world (e.g., autonomous vehicles), ensuring its safety becomes a paramount requirement prior to its deployment.
+  Moreover, as datasets, ML/DL models, and learning tasks become increasingly complex, getting ML/DL to scale calls
+  for new advances in learning algorithm design. Thus, robustness and scalability underscore my current and future
+  research, and of course, these two goals are intertwined. More broadly, the study towards robust and scalable AI
+  could make a significant impact on machine learning theories, and induce more promising applications in, e.g.,
+  automated ML, meta-learning, privacy and security, hardware design, and big data analysis. I intend to seek a new
+  learning frontier when the current learning algorithms become infeasible, and formalize foundations of secure
+  learning.
+</p>
+
 <p>Please refer to <a href="https://lsjxjtu.github.io/funding.html">Projects</a> and our <a href="https://www.optml-group.com/posts">OPTML</a> group for some research highlights.</p>
 <p>📖 <b>For a more detailed introduction, see our 
 <a href="/pdf/recruitment/Welcome2OPTML.pdf">Welcome2OPTML Booklet</a>.</b>
 </p>
+
+
 <h2>Representative Publications</h2>
 <ul>
 <li><p><b>Trustworthy AI</b> : Robustness, Fairness, and Model Explanation </p>
