--- a/publications.html
+++ b/publications.html
@@ -33,7 +33,7 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
-<li><p>Y. Zhang, C. Wang, Y. Chen, C. Fan, J. Jia, <b>S. Liu</b>, <a href="https://neurips.cc/virtual/2025/poster/119184">The Fragile Truth of Saliency: Improving LLM Input Attribution via Attention Bias Optimization</a>, <i>NeurIPS’25</i>, <b>Oral</b> <tt>(3.2% acceptance rate)</tt></p></li>
+<li><p>Y. Zhang, C. Wang, Y. Chen, C. Fan, J. Jia, <b>S. Liu</b>, <a href="https://neurips.cc/virtual/2025/poster/119184">The Fragile Truth of Saliency: Improving LLM Input Attribution via Attention Bias Optimization</a>, <i>NeurIPS’25</i>, <b>Spotlight</b> <tt>(3.2% acceptance rate)</tt></p></li>
 <li><p>C. Fan*, J. Liu*, L. Lin*, J. Jia, S. Mei, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2410.07163">Simplicity Prevails: Rethinking Negative Preference Optimization for LLM Unlearning</a>, <i>NeurIPS’25</i></p></li>
 <li><p>C. Wang, Y. Zhang, D. Wei, J. Jia, P.-Y. Chen, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2510.09007">LLM Unlearning on Noisy Forget Sets: A Study of Incomplete, Rewritten, and Watermarked Data</a>, <i>CCS AISec’25</i></p></li>
 <li><p>M. Zhang*, Y. Zhang*, J. Jia, Z. Wang, <b>S. Liu</b>, T. Chen, <a href="https://arxiv.org/abs/2510.15965">One Token Embedding Is Enough to Deadlock Your Large Reasoning Model</a>, <i>NeurIPS’25</i></p></li>
