--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@
 <li><p>Y. Sun*, Y. Zhang*, G. Liu, H. Xie, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2508.10065">Invisible Watermarks, Visible Gains: Steering Machine Unlearning with Bi-Level Watermarking Design</a>, <i>ICCV’25</i></p></li>
 <li><p>C. Fan, J. Jia, Y. Zhang, A. Ramakrishna, M. Hong, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2502.05374">Towards LLM Unlearning Resilient to Relearning Attacks: A Sharpness-Aware Minimization Perspective and Beyond</a>, <i>ICML&rsquo;25</i></p>
 </li>
-<li><p>C. Wang, Y. Zhang, J. Jia, P. Ram, D. Wei, Y. Yao, S. Pal, N. Baracaldo, <b>S. Liu</b>, Invariance Makes LLM Unlearning Resilient Even to Unanticipated Downstream Fine-Tuning, <i>ICML&rsquo;25</i></p>
+<li><p>C. Wang, Y. Zhang, J. Jia, P. Ram, D. Wei, Y. Yao, S. Pal, N. Baracaldo, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2506.01339">Invariance Makes LLM Unlearning Resilient Even to Unanticipated Downstream Fine-Tuning</a>, <i>ICML&rsquo;25</i></p>
 </li>
 <li><p>H. Li, Y. Zhang, S. Zhang, M. Wang, <b>S. Liu</b>, P.-Y. Chen, <a href="https://openreview.net/forum?id=vRvVVb0NAz">When is Task Vector Provably Effective for Model Editing? A Generalization Analysis of Nonlinear Transformers</a>, <i>ICLR’25</i>, <b>Oral</b> <tt>(1.8% acceptance rate)</tt></p>
 </li>
