--- a/talk.html
+++ b/talk.html
@@ -29,6 +29,20 @@
 </div>
 <h2>Tutorial talks </h2>
 <ul>
+<li><p><a href="https://sites.google.com/view/u-and-me-workshop/">When Unlearning Fails: Probing the Robustness of Machine Unlearning</a>, 2nd Workshop and Challenge on Unlearning and Model Editing @ ICCV’25</p></li>
+
+<li><p><a href="https://robust-perception-group.github.io/rvlgm/">Enhancing Generative Model Safety through Machine Unlearning</a>, Tutorial on Responsible Vision-Language Generative Models @ ICCV’25</p></li>
+
+<li><p><a href="https://milcom2025.ieee-milcom.org/program/tutorials">Robust Machine Unlearning: Securing Foundation Models Against Forgetting Failures</a>, IEEE Military Communications Conference, 2025</p></li>
+
+<li><p><a href="https://mugenworkshop.github.io/">Machine Unlearning for Generative AI: Promises, Pitfalls, and Prospects</a>, ICML 2025 Workshop on Machine Unlearning for Generative AI</p></li>
+
+<li><p><a href="https://outshift.cisco.com/blog/efficiency-ai-cisco-research-summit">Memory-Efficient Fine-Tuning for Large Language Models: A Zeroth-Order Optimization Perspective</a>, Cisco Research Efficient AI Summit, 2024</p></li>
+
+<li><p><a href="https://sites.google.com/view/cvpr-2024-tutorial">Machine Unlearning in Computer Vision: Foundations and Applications</a>, CVPR’24</p></li>
+
+<li><p><a href="https://sites.google.com/view/zo-tutorial-aaai-2024/">Zeroth-Order Machine Learning: Fundamental Principles and Emerging Applications in Foundation Models</a>, AAAI’24</p></li>
+
 <li><p><a href="https://2023.ieeemlsp.org/tutorials/">Bi-Level Optimization In Signal Processing And Machine Learning: Foundations And Emerging Applications</a>, IEEE MLSP’23 </p>
 </li>
 <li><p><a href="https://sites.google.com/view/cvpr2023red">Reverse Engineering of Deceptions: Foundations and Applications</a>, <i>CVPR&rsquo;23</i></p>
