--- a/talk.html
+++ b/talk.html
@@ -58,7 +58,9 @@
 </ul>
 <h2>Organized workshops </h2>
 <ul>
-<li><p><a href="https://advml-frontier.github.io/">New Frontiers in Adversarial Machine Learning</a> (AdvML Frontiers@ICML), 2022-2023</p>
+<li><p><a href="https://advml-frontier.github.io/">New Frontiers in Adversarial Machine Learning</a> (AdvML Frontiers@NeurIPS), 2023-2024</p>
+</li>
+<li><p><a href="https://advml-frontier.github.io/past/icml2023/index.html">New Frontiers in Adversarial Machine Learning</a> (AdvML Frontiers@ICML), 2022-2023</p>
 </li>
 <li><p><a href="https://sites.google.com/view/advml">Adversarial Learning Methods for Machine Learning and Data Mining</a> (AdvML@KDD), 2019-2022
 </p>
