--- a/publications.html
+++ b/publications.html
@@ -250,7 +250,7 @@
 </ol>
 <h2>Journal Papers </h2>
 <ol>
-<li><p>S. Liang, Jinghan Jia, Ismail Alkhouri, <b>S. Liu</b>, and Saiprasad Ravishankar. <a href="https://arxiv.org/abs/2312.07784">Robust MRI reconstruction by smoothed unrolling (SMUG)</a>, IEEE Journal of Selected Topics in Signal Processing (2025).</p></li>
+<li><p>S. Liang, J. Jia, I. Alkhouri, <b>S. Liu</b>, S. Ravishankar. <a href="https://arxiv.org/abs/2312.07784">Robust MRI reconstruction by smoothed unrolling (SMUG)</a>, IEEE Journal of Selected Topics in Signal Processing (2025).</p></li>
 <li><p><b>S. Liu</b>, Y. Yao, J. Jia, S. Casper, N. Baracaldo, P. Hase, Y. Yao, C. Y. Liu, X. Xu, H. Li, K. R. Varshney, M. Bansal, S. Koyejo, Y. Liu. <a href="https://www.nature.com/articles/s42256-025-00985-0">Rethinking machine unlearning for large language models</a>, Nature Machine Intelligence (2025).</p>
 </li>
 <li><p>Y. Zhang, P. Khanduri, I. Tsaknakis, Y. Yao, M. Hong, <b>S. Liu</b>, <a href="https://ieeexplore.ieee.org/document/10502023">An Introduction to Bilevel Optimization: Foundations and applications in signal processing and machine learning</a>, IEEE Signal Processing Magazine, vol. 41, no. 1, pp. 38-59, Jan. 2024</p>
