--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@ ICML’20</p>
 </ol>
 <h2>News</h2>
 <p>* We released the <a href="/pdf/recruitment/Welcome2OPTML.pdf">Welcome2OPTML Booklet</a> as a detailed introduction to our lab and an open invitation for strong prospective candidates to join us in 2026!</p>
+<p>* PI Sijia Liu is running for the AAAI 2026 Executive Council Election, aiming to bridge the gap between foundational and applied AI research through new AAAI initiatives and community engagement. AAAI members are encouraged to cast their vote in support!</p>
+<p>* Congratulations to PI Sijia Liu, together with Co-PIs Zhangyang Wang (UT Austin) and Huan Zhang (UIUC), for receiving the Schmidt Sciences Grant Award! Their project focuses on advancing reasoning model safety within the test-time compute paradigm.</p>
 <p>* Congratulations to Dr. Liu, who has been elected as a Senior Member of in the Association for the Advancement of Artificial Intelligence (AAAI) in recognition of his achievements and long-standing efforts in the field of AI and long-term participation in AAAI!</p>
 <p>* Dr. Liu is named <b>Red Cedar Distinguished Professor</b>!</p>
 <p>* Congrats to OPTML on three papers accepted at NeurIPS 2025! One spotlight and two posters, covering LLM unlearning, interpretability, and security on reasoning models!</p>
