--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@ Interested candidates are strongly encouraged to contact me by <a href="mailto:l
 <p>Dr. Liu is a Senior Member of IEEE and an active contributor to the research community. He serves on the IEEE Signal Processing Society’s Machine Learning for Signal Processing Technical Committee and as Associate Editor for both IEEE Transactions on Signal Processing and IEEE Transactions on Aerospace and Electronic Systems. He has served as Area Chair for ICASSP and ML conferences, including NeurIPS, ICML, ICLR, and AISTATS. He founded the New Frontiers in Adversarial Machine Learning Workshop series (ICML/NeurIPS 2021–2024) and was a Co-Chair of the Conference on Parsimony and Learning (CPAL) in 2024. In addition, he has delivered numerous tutorials on trustworthy and scalable ML at leading conferences, including ICASSP, AAAI, CVPR, and NeurIPS.</p>
 <h2>Selected Awards</h2>
 <ul>
+<li><p>Selected Awards: Cisco Research Awards, 2022-2025</p>
+</li>
 <li><p>Aharon Katzir Young Investigator Award, International Neural Network Society (INNS), 2025</p>
 </li>
 <li><p>Withrow Rising Scholar Award, Michigan State University, 2025</p>
@@ -150,6 +152,7 @@ ICML’20</p>
 <h2>News</h2>
 <p>* We released the <a href="/pdf/recruitment/Welcome2OPTML.pdf">Welcome2OPTML Booklet</a> as a detailed introduction to our lab and an open invitation for strong prospective candidates to join us in 2026!</p>
 <p>* PI Sijia Liu is running for the AAAI 2026 Executive Council Election, aiming to bridge the gap between foundational and applied AI research through new AAAI initiatives and community engagement. AAAI members are encouraged to cast their vote in support!</p>
+<p>* PI Sijia Liu is grateful to receive a gift funding from Cisco Research as the PI. This support will further advance the OPTML Lab’s ongoing research on effective and efficient training of vision-language-action models.</p>
 <p>* Congratulations to PI Sijia Liu, together with Co-PIs Zhangyang Wang (UT Austin) and Huan Zhang (UIUC), for receiving the Schmidt Sciences Grant Award! Their project focuses on advancing reasoning model safety within the test-time compute paradigm.</p>
 <p>* Congratulations to Dr. Liu, who has been elected as a Senior Member of in the Association for the Advancement of Artificial Intelligence (AAAI) in recognition of his achievements and long-standing efforts in the field of AI and long-term participation in AAAI!</p>
 <p>* Dr. Liu is named <b>Red Cedar Distinguished Professor</b>!</p>
