--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Interested candidates are strongly encouraged to contact me by <a href="mailto:l
 <p>Dr. Liu is a Senior Member of IEEE and an active contributor to the research community. He serves on the IEEE Signal Processing Society’s Machine Learning for Signal Processing Technical Committee and as Associate Editor for both IEEE Transactions on Signal Processing and IEEE Transactions on Aerospace and Electronic Systems. He has served as Area Chair for ICASSP and ML conferences, including NeurIPS, ICML, ICLR, and AISTATS. He founded the New Frontiers in Adversarial Machine Learning Workshop series (ICML/NeurIPS 2021–2024) and was a Co-Chair of the Conference on Parsimony and Learning (CPAL) in 2024. In addition, he has delivered numerous tutorials on trustworthy and scalable ML at leading conferences, including ICASSP, AAAI, CVPR, and NeurIPS.</p>
 <h2>Selected Awards</h2>
 <ul>
-<li><p>Selected Awards: Cisco Research Awards, 2022-2025</p>
+<li><p>Cisco Research Awards, 2022-2025</p>
 </li>
 <li><p>Aharon Katzir Young Investigator Award, International Neural Network Society (INNS), 2025</p>
 </li>
