--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Interested candidates are strongly encouraged to contact me by <a href="mailto:l
 </li>
 <li><p>The Best Paper Runner-Up Award at 38th Conference on Uncertainty in Artificial Intelligence (UAI), 2022</p>
 </li>
-<li><p>IBM Pat Goldberg Best Paper Award Finalist, 2020</p>
+<li><p>IBM Pat Goldberg Best Paper Award Finalist, 2020 & 2024 </p>
 </li>
 <li><p>Best Student Paper Award at the 42nd International Conference on Acoustics, Speech, and Signal Processing (ICASSP), 2017</p>
 </li>
