--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Interested candidates are strongly encouraged to contact me by <a href="mailto:l
 <h2>Short Bio</h2>
 <p>Sijia Liu is currently an Associate Professor at the CSE department of Michigan State University, an Affiliated Professor at IBM Research, and an MIT-IBM Watson AI Lab affiliated PI. He received the Ph.D. degree (with All-University Doctoral Prize) in Electrical and Computer Engineering from Syracuse University, NY, USA, in 2016. He was a Postdoctoral Research Fellow at the University of Michigan, Ann Arbor, in 2016-2017, and a Research Staff Member at the MIT-IBM Watson AI Lab in 2018-2020. His research interests include scalable and trustworthy AI, e.g. scalable optimization for deep models, machine unlearning for vision and language models, AI robustness, and data-model efficiency.</p>
 <p>His accomplishments have also been recognized through numerous competitive awards. He received the NSF CAREER Award in 2024 for his work on zeroth-order optimization and was named to the AAAI New Faculty Highlights in 2023 for his contributions to scalable optimization for robust AI. In 2025, he was honored with the Withrow Rising Scholar Award (the highest recognition for junior faculty in MSU’s College of Engineering), and received the Aharon Katzir Young Investigator Award from the International Neural Network Society (INNS) for foundational contributions to robust and efficient neural networks. He has also received industry faculty awards such as the Amazon Research Award and the Cisco Research Awards. According to 2025 <a href="https://csrankings.org/">CSRankings</a>, he holds the #1 research productivity rank at MSU over the past decade, with a score of 95. His research has received several best paper honors, including the Best Paper Runner-Up Award at UAI 2022, IBM Pat Goldberg Best Paper Award Finalist (2020 and 2024), and the Best Student Paper Award at ICASSP 2017.</p>
-<p>Dr. Liu is a Senior Member of IEEE, a Senior Member of AAAI, and an active contributor to the research community. He serves on the Machine Learning for Signal Processing (MLSP) Technical Committee of the IEEE Signal Processing Society and will serve as Vice Chair in 2026 and Chair in 2027. He also serves as an Associate Editor for IEEE Transactions on Signal Processing and IEEE Transactions on Aerospace and Electronic Systems. In addition, he has served as an Area Chair for leading ML/AI conferences, including NeurIPS, ICML, ICLR, AISTATS, AAAI, and ICASSP. He founded the New Frontiers in Adversarial Machine Learning Workshop series (ICML/NeurIPS 2021–2024) and was a Co-Chair of the Conference on Parsimony and Learning (CPAL) in 2024. In addition, he is an active speaker and has delivered tutorials on trustworthy and scalable machine learning at major conferences, including AAAI, CVPR, NeurIPS, ICASSP, and MLSP.</p>
+<p>Dr. Liu is a Senior Member of IEEE, a Senior Member of AAAI, and an active contributor to the research community. He serves on the Machine Learning for Signal Processing (MLSP) Technical Committee of the IEEE Signal Processing Society and will serve as Vice Chair in 2026 and Chair in 2027. He also serves as an Associate Editor for IEEE Transactions on Signal Processing and IEEE Transactions on Aerospace and Electronic Systems. He has served as an Area Chair for leading ML/AI conferences, including NeurIPS, ICML, ICLR, AISTATS, AAAI, and ICASSP. He founded the New Frontiers in Adversarial Machine Learning Workshop series (ICML/NeurIPS 2021–2024) and was a Co-Chair of the Conference on Parsimony and Learning (CPAL) in 2024. In addition, he is an active speaker and has delivered tutorials on trustworthy and scalable machine learning at major conferences, including AAAI, CVPR, NeurIPS, ICASSP, and MLSP.</p>
 <h2>Selected Awards</h2>
 <ul>
 <li><p>Aharon Katzir Young Investigator Award, International Neural Network Society (INNS), 2025</p>
@@ -74,18 +74,14 @@ Interested candidates are strongly encouraged to contact me by <a href="mailto:l
   <a href="pdf/recruitment/Welcome2OPTML.pdf" target="_blank" class="ri-photo">
     <img src="images/cover_img.png" alt="OPTML @ MSU" />
   </a>
-  My research spans the areas of machine learning (ML)/deep learning (DL), optimization, computer vision, security,
-  signal processing and data science, with a focus on developing learning algorithms and theory, and robust and
-  explainable artificial intelligence (AI). These research themes provide a solid foundation for reaching my
-  <b>long-term research objective: Making AI systems safe and scalable</b>. As AI moves from the lab into the real
-  world (e.g., autonomous vehicles), ensuring its safety becomes a paramount requirement prior to its deployment.
-  Moreover, as datasets, ML/DL models, and learning tasks become increasingly complex, getting ML/DL to scale calls
-  for new advances in learning algorithm design. Thus, robustness and scalability underscore my current and future
-  research, and of course, these two goals are intertwined. More broadly, the study towards robust and scalable AI
-  could make a significant impact on machine learning theories, and induce more promising applications in, e.g.,
-  automated ML, meta-learning, privacy and security, hardware design, and big data analysis. I intend to seek a new
-  learning frontier when the current learning algorithms become infeasible, and formalize foundations of secure
-  learning.
+   My research spans machine learning (ML) and deep learning (DL), optimization, computer vision, large language modeling, security and privacy, signal processing, and data science, covering the full theory–algorithm–application stack. 
+  These research themes provide a strong foundation for my <b>long-term research objective: making AI systems safe and scalable</b>.
+   As AI systems move from controlled laboratory settings into real-world deployments, ensuring their reliability, robustness, and safety becomes a paramount requirement prior to
+  deployment. At the same time, as datasets, ML/DL models, and learning tasks continue to grow in scale and complexity,
+  achieving scalability demands fundamentally new advances in learning algorithm design.
+  Accordingly, robustness and efficiency are central to my current and future research agenda, and these two objectives are inherently intertwined. 
+    Looking ahead, my research aims to identify new learning frontiers when existing algorithms become infeasible, and to formalize the
+  foundations of safe, reliable, and efficient learning systems.
 </p>
 
 <p>Please refer to <a href="https://lsjxjtu.github.io/funding.html">Projects</a> and our <a href="https://www.optml-group.com/posts">OPTML</a> group for some research highlights.</p>
