--- a/index.html
+++ b/index.html
@@ -96,21 +96,25 @@ Interested candidates are strongly encouraged to contact me by <a href="mailto:l
 </li>
 </ul>
 <ol>
+<li><p><a href="https://openreview.net/pdf?id=DrUR87D4Hj">The Fragile Truth of Saliency: Improving LLM Input Attribution via Attention Bias Optimization</a> <br />
+ Y. Zhang, C. Wang, Y. Chen, C. Fan, J. Jia, <b>S. Liu</b> <br />
+NeurIPS’25</p>
+</li>
 <li><p><a href="https://www.nature.com/articles/s42256-025-00985-0">Rethinking Machine Unlearning For Large Language Models</a> <br />
-<b>S. Liu</b>, Y. Yao*, J. Jia*, S. Casper, N. Baracaldo, P. Hase, Y. Yao, C. Y. Liu, X. Xu, H. Li, K. R. Varshney, M. Bansal, S. Koyejo, Y. Liu <br /> 
+<b>S. Liu</b>, Y. Yao, J. Jia, S. Casper, N. Baracaldo, P. Hase, Y. Yao, C. Y. Liu, X. Xu, H. Li, K. R. Varshney, M. Bansal, S. Koyejo, Y. Liu <br /> 
 Nature Machine Intelligence, 2025, pp.181–194</p>
 </li>
-<li><p><a href="https://arxiv.org/pdf/2310.11868">To Generate Or Not? Safety-driven Unlearned Diffusion Models Are Still Easy To Generate Unsafe Images&hellip; For Now</a> <br />
+<!--<li><p><a href="https://arxiv.org/pdf/2310.11868">To Generate Or Not? Safety-driven Unlearned Diffusion Models Are Still Easy To Generate Unsafe Images&hellip; For Now</a> <br />
 Y. Zhang*, J. Jia*, X. Chen, A. Chen, Y. Zhang, J. Liu, K. Ding, and <b>S. Liu</b> <br /> 
 ECCV’24</p>
-</li>
+</li>-->
 <li><p><a href="https://arxiv.org/pdf/2310.12508">Salun: Empowering Machine Unlearning Via Gradient-based Weight Saliency In Both Image Classification And Generation</a> <br />
 C. Fan*, J. Liu*, Y. Zhang, E. Wong, D. Wei, <b>S. Liu</b> <br />
-ICLR’24</p>
+ICLR’24 (* Equal contribution)</p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2304.04934">Model Sparsity Can Simplify Machine Unlearning</a> <br /> 
 J. Jia*, J. Liu*, P. Ram, Y. Yao, G. Liu, Y. Liu, P. Sharma, <b>S. Liu</b> <br />
-NeurIPS&rsquo;23</p>
+NeurIPS'23</p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/2112.12376.pdf">Revisiting And Advancing Fast Adversarial Training Through The Lens Of Bi-level Optimization</a> <br /> 
 Y. Zhang*, G. Zhang*, P. Khanduri, M. Hong, S. Chang, <b>S. Liu</b> (* Equal contribution) <br /> 
