--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@ ICML’20</p>
 </ol>
 <h2>News</h2>
 <p>* We released the <a href="/pdf/recruitment/Welcome2OPTML.pdf">Welcome2OPTML Booklet</a> as a detailed introduction to our lab and an open invitation for strong prospective candidates to join us in 2026!</p>
-<p>* Congratulations to OPTMLer Jinghan Jia for being selected for the Anthropic Fellows Program for AI Safety Research!</p>
+<p>* <strong>Nov, 2025</strong>
+    <span style="color:#ff8c00; font-weight:bold;">[HONOR]</span> 
+     Congratulations to OPTMLer Jinghan Jia for being selected for the Anthropic Fellows Program for AI Safety Research!</p>
 <p>* PI Sijia Liu is running for the AAAI 2026 Executive Council Election, aiming to bridge the gap between foundational and applied AI research through new AAAI initiatives and community engagement. AAAI members are encouraged to cast their vote in support!</p>
 <p>* PI Sijia Liu is grateful to receive a gift funding from Cisco Research as the PI. This support will further advance the OPTML Lab’s ongoing research on effective and efficient training of vision-language-action models.</p>
 <p>* Congratulations to PI Sijia Liu, together with Co-PIs Zhangyang Wang (UT Austin) and Huan Zhang (UIUC), for receiving the Schmidt Sciences Grant Award! Their project focuses on advancing reasoning model safety within the test-time compute paradigm.</p>
