--- a/index.html
+++ b/index.html
@@ -149,17 +149,32 @@ ICML’20</p>
 </ol>
 <h2>News</h2>
 <p>* We released the <a href="/pdf/recruitment/Welcome2OPTML.pdf">Welcome2OPTML Booklet</a> as a detailed introduction to our lab and an open invitation for strong prospective candidates to join us in 2026!</p>
-<p>* <strong>Nov, 2025</strong>
+<p>* <strong>Nov., 2025</strong>
     <span style="color:#ff8c00; font-weight:bold;">[HONOR]</span> 
      Congratulations to OPTMLer Jinghan Jia for being selected for the Anthropic Fellows Program for AI Safety Research!</p>
-<p>* PI Sijia Liu is running for the AAAI 2026 Executive Council Election, aiming to bridge the gap between foundational and applied AI research through new AAAI initiatives and community engagement. AAAI members are encouraged to cast their vote in support!</p>
-<p>* PI Sijia Liu is grateful to receive a gift funding from Cisco Research as the PI. This support will further advance the OPTML Lab’s ongoing research on effective and efficient training of vision-language-action models.</p>
-<p>* Congratulations to PI Sijia Liu, together with Co-PIs Zhangyang Wang (UT Austin) and Huan Zhang (UIUC), for receiving the Schmidt Sciences Grant Award! Their project focuses on advancing reasoning model safety within the test-time compute paradigm.</p>
-<p>* Congratulations to Dr. Liu, who has been elected as a Senior Member of in the Association for the Advancement of Artificial Intelligence (AAAI) in recognition of his achievements and long-standing efforts in the field of AI and long-term participation in AAAI!</p>
-<p>* Dr. Liu is named <b>Red Cedar Distinguished Professor</b>!</p>
-<p>* Congrats to OPTML on three papers accepted at NeurIPS 2025! One spotlight and two posters, covering LLM unlearning, interpretability, and security on reasoning models!</p>
-<p>* Congrats to Changsheng, Yihua, and Jinghan on their paper acceptance at the 18th ACM Workshop on Artificial Intelligence and Security (AISec).</p>
-<p>* Congratulations to Changsheng, Chongyu, Yihua, and Jinghan on their paper, “<a href="https://arxiv.org/pdf/2506.12963">Reasoning Model Unlearning: Forgetting Traces, Not Just Answers, While Preserving Reasoning Skills</a>”, which is accepted as a Main paper at EMNLP 2025.</p>
+<!--<p>* PI Sijia Liu is running for the AAAI 2026 Executive Council Election, aiming to bridge the gap between foundational and applied AI research through new AAAI initiatives and community engagement. AAAI members are encouraged to cast their vote in support!</p>
+-->
+<p>* <strong>Nov., 2025</strong>
+    <span style="color:#006400; font-weight:bold;">[Grant]</span>
+  PI Sijia Liu is grateful to receive a gift funding from Cisco Research as the PI. This support will further advance the OPTML Lab’s ongoing research on effective and efficient training of vision-language-action models.</p>
+<p>* <strong>Nov., 2025</strong>
+    <span style="color:#006400; font-weight:bold;">[Grant]</span>
+     Congratulations to PI Sijia Liu, together with Co-PIs Zhangyang Wang (UT Austin) and Huan Zhang (UIUC), for receiving the Schmidt Sciences Grant Award! Their project focuses on advancing reasoning model safety within the test-time compute paradigm.</p>
+<p>* <strong>Nov., 2025</strong>
+    <span style="color:#ff8c00; font-weight:bold;">[HONOR]</span> 
+  Congratulations to Dr. Liu, who has been elected as a Senior Member of the Association for the Advancement of Artificial Intelligence (AAAI) in recognition of his achievements and long-standing efforts in the field of AI and long-term participation in AAAI!</p>
+<p>* <strong>Oct., 2025</strong>
+    <span style="color:#ff8c00; font-weight:bold;">[HONOR]</span> 
+  Dr. Liu is named <b>Red Cedar Distinguished Professor</b>!</p>
+<p>* <strong>Sept., 2025</strong>
+    <span style="color:#8B0000; font-weight:bold;">[Papers]</span>
+  Congrats to OPTML on three papers accepted at NeurIPS 2025! One spotlight and two posters, covering LLM unlearning, interpretability, and security on reasoning models!</p>
+<p>* <strong>Aug., 2025</strong>
+    <span style="color:#8B0000; font-weight:bold;">[Papers]</span> 
+  Congrats to Changsheng, Yihua, and Jinghan on their paper acceptance at the 18th ACM Workshop on Artificial Intelligence and Security (AISec).</p>
+<p>* <strong>Aug., 2025</strong>
+    <span style="color:#8B0000; font-weight:bold;">[Papers]</span>  
+  Congratulations to Changsheng, Chongyu, Yihua, and Jinghan on their paper, “<a href="https://arxiv.org/pdf/2506.12963">Reasoning Model Unlearning: Forgetting Traces, Not Just Answers, While Preserving Reasoning Skills</a>”, which is accepted as a Main paper at EMNLP 2025.</p>
 <p>* We are excited to announce that our tutorial “Robust Machine Unlearning: Securing Foundation Models Against Forgetting Failures” has been accepted for presentation at the IEEE Military Communications Conference (MILCOM 2025); see details at schedule [<a href="https://milcom2025.ieee-milcom.org/program/tutorials">link</a>].</p>
 <p>* Honored to receive a new Medium Grant Award from the National Science Foundation (NSF) as the lead PI, in collaboration with PIs Dongxiao Zhu (Wayne State) and Sanmi Koyejo (Stanford). Grateful for NSF’s support and excited to advance our research together!</p>
 <p>* Prof. Sijia Liu has been promoted to Associate Professor.</p>
