--- a/index.html
+++ b/index.html
@@ -149,8 +149,11 @@ ICML’20</p>
 </ol>
 <h2>News</h2>
 <p>* We released the <a href="/pdf/recruitment/Welcome2OPTML.pdf">Welcome2OPTML Booklet</a> as a detailed introduction to our lab and an open invitation for strong prospective candidates to join us in 2026!</p>
+<p>* <strong>Dec., 2025</strong>
+    <span style="color:#006400; font-weight:bold;">[Grant]</span>
+    PI Liu is grateful to receive a research grant from DSO National Laboratories, Singapore, as the PI.
 <p>* <strong>Nov., 2025</strong>
-    <span style="color:#ff8c00; font-weight:bold;">[HONOR]</span> 
+     <span style="color:#ff8c00; font-weight:bold;">[HONOR]</span> 
      Congratulations to OPTMLer Jinghan Jia for being selected for the Anthropic Fellows Program for AI Safety Research!</p>
 <!--<p>* PI Sijia Liu is running for the AAAI 2026 Executive Council Election, aiming to bridge the gap between foundational and applied AI research through new AAAI initiatives and community engagement. AAAI members are encouraged to cast their vote in support!</p>
 -->
@@ -175,14 +178,30 @@ ICML’20</p>
 <p>* <strong>Aug., 2025</strong>
     <span style="color:#8B0000; font-weight:bold;">[Papers]</span>  
   Congratulations to Changsheng, Chongyu, Yihua, and Jinghan on their paper, “<a href="https://arxiv.org/pdf/2506.12963">Reasoning Model Unlearning: Forgetting Traces, Not Just Answers, While Preserving Reasoning Skills</a>”, which is accepted as a Main paper at EMNLP 2025.</p>
-<p>* We are excited to announce that our tutorial “Robust Machine Unlearning: Securing Foundation Models Against Forgetting Failures” has been accepted for presentation at the IEEE Military Communications Conference (MILCOM 2025); see details at schedule [<a href="https://milcom2025.ieee-milcom.org/program/tutorials">link</a>].</p>
-<p>* Honored to receive a new Medium Grant Award from the National Science Foundation (NSF) as the lead PI, in collaboration with PIs Dongxiao Zhu (Wayne State) and Sanmi Koyejo (Stanford). Grateful for NSF’s support and excited to advance our research together!</p>
-<p>* Prof. Sijia Liu has been promoted to Associate Professor.</p>
-<p>* Congratulations to Soumyadeep and Changsheng on their COLM’25 acceptance of “LLM Unlearning Reveals a Stronger-Than-Expected Coreset Effect in Current Benchmarks.”</p>
-<p>* Congratulations to Yihua and Yuhao on their ICCV acceptance for their paper “Invisible Watermarks, Visible Gains: Steering Machine Unlearning with Bi-Level Watermarking Design”.</p>
-<p>* Excited and grateful to receive a gift award from the Center for AI Safety (CAIS).</p>
-<p>* Dr. Liu is selected as the recipient of the <b>2024 Aharon Katzir Young Investigator Award</b> from the <a href="https://www.inns.org/">International Neural Network Society (INNS)</a>. </p>
-<p>* Excited and grateful to receive a research grant from Open Philanthropy to support our AI safety research.</p>
+<p>* <strong>Aug., 2025</strong>
+  <span style="color:#006d6f; font-weight:bold;">[Tutorials]</span>
+  We are excited to announce that our tutorial “Robust Machine Unlearning: Securing Foundation Models Against Forgetting Failures” has been accepted for presentation at the IEEE Military Communications Conference (MILCOM 2025); see details at schedule [<a href="https://milcom2025.ieee-milcom.org/program/tutorials">link</a>].</p>
+<p>* <strong>Jul., 2025</strong>
+    <span style="color:#006400; font-weight:bold;">[Grant]</span>
+  Honored to receive a new Medium Grant Award from the National Science Foundation (NSF) as the lead PI, in collaboration with PIs Dongxiao Zhu (Wayne State) and Sanmi Koyejo (Stanford). Grateful for NSF’s support and excited to advance our research together!</p>
+<p>*  <strong>Jul., 2025</strong>
+    <span style="color:#ff8c00; font-weight:bold;">[HONOR]</span> 
+  Prof. Sijia Liu has been promoted to Associate Professor.</p>
+<p>* <strong>Jul., 2025</strong>
+    <span style="color:#8B0000; font-weight:bold;">[Papers]</span> 
+  Congratulations to Soumyadeep and Changsheng on their COLM’25 acceptance of “LLM Unlearning Reveals a Stronger-Than-Expected Coreset Effect in Current Benchmarks.”</p>
+<p>* <strong>Jul., 2025</strong>
+    <span style="color:#8B0000; font-weight:bold;">[Papers]</span> 
+  Congratulations to Yihua and Yuhao on their ICCV acceptance for their paper “Invisible Watermarks, Visible Gains: Steering Machine Unlearning with Bi-Level Watermarking Design”.</p>
+<p>* <strong>Jun., 2025</strong>
+    <span style="color:#006400; font-weight:bold;">[Grant]</span>
+  Excited and grateful to receive a gift award from the Center for AI Safety (CAIS).</p>
+<p>* <strong>Jun., 2025</strong>
+    <span style="color:#ff8c00; font-weight:bold;">[HONOR]</span>
+  Dr. Liu is selected as the recipient of the <b>2024 Aharon Katzir Young Investigator Award</b> from the <a href="https://www.inns.org/">International Neural Network Society (INNS)</a>. </p>
+<p>* <strong>Jun., 2025</strong>
+    <span style="color:#006400; font-weight:bold;">[Grant]</span>
+  Excited and grateful to receive a research grant from Open Philanthropy to support our AI safety research.</p>
 <p>* <b>Two papers accepted at ICML 2025!</b> Congratulations to <b>Changsheng Wang</b> and <b>Chongyu Fan</b> on their first first-author ICML papers&ndash;well deserved!</p>
 <p>* Grateful to participate in <a href="https://cse.buffalo.edu/~jsyuan/ResponsibleAI_NSF.html">the U.S.–Southeast Asia Regional Workshop on Responsible Artificial Intelligence</a>. An invaluable experience engaging in important discussions on advancing responsible AI globally.</p>
 <p>* Congratulations to Yihua Zhang for winning the First-Place Award for the 2024-25 Fitch H. Beach Award!</p>
