--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ ICML’20</p>
     <span style="color:#8B0000; font-weight:bold;">[Paper]</span>  
   Congratulations to Changsheng, Chongyu, Yihua, and Jinghan on their paper, “<a href="https://arxiv.org/pdf/2506.12963">Reasoning Model Unlearning: Forgetting Traces, Not Just Answers, While Preserving Reasoning Skills</a>”, which is accepted as a Main paper at EMNLP 2025.</p>
 <p>* <strong>Aug., 2025</strong>
-  <span style="color:#006d6f; font-weight:bold;">[Tutorials]</span>
+  <span style="color:#006d6f; font-weight:bold;">[Tutorial]</span>
   We are excited to announce that our tutorial “Robust Machine Unlearning: Securing Foundation Models Against Forgetting Failures” has been accepted for presentation at the IEEE Military Communications Conference (MILCOM 2025); see details at schedule [<a href="https://milcom2025.ieee-milcom.org/program/tutorials">link</a>].</p>
 <p>* <strong>Jul., 2025</strong>
     <span style="color:#006400; font-weight:bold;">[Grant]</span>
