--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@ ICML’20</p>
 </ol>
 <h2>News</h2>
 <p>* We released the <a href="/pdf/recruitment/Welcome2OPTML.pdf">Welcome2OPTML Booklet</a> as a detailed introduction to our lab and an open invitation for strong prospective candidates to join us in 2026!</p>
+<p>* <strong>Jan., 2026</strong>
+    <span style="color:#8B0000; font-weight:bold;">[Papers]</span>
+  Congrats to OPTML on six papers accepted at ICLR 2026, covering LLM unlearning, safety, test-time compute, and gradient-free learning!</p>
 <p>* <strong>Dec., 2025</strong>
     <span style="color:#006400; font-weight:bold;">[Grant]</span>
     PI Liu is grateful to receive a research grant from DSO National Laboratories, Singapore, as the PI.
