--- a/talk.html
+++ b/talk.html
@@ -27,34 +27,43 @@
 <div id="toptitle">
 <h1>Talks</h1>
 </div>
-<h2>Tutorial talks </h2>
+<h2>Invited Talks </h2>
 <ul>
-<li><p><a href="https://sites.google.com/view/u-and-me-workshop/">When Unlearning Fails: Probing the Robustness of Machine Unlearning</a>, 2nd Workshop and Challenge on Unlearning and Model Editing @ ICCV’25</p></li>
+<li><p><a href="https://www.youtube.com/watch?v=nnhKPuJwrYE">Machine Unlearning for AI Safety: From Science to Practice</a>, International Neural Network Society (INNS) Webinar Series, Dec. 2025</p></li>
 
-<li><p><a href="https://robust-perception-group.github.io/rvlgm/">Enhancing Generative Model Safety through Machine Unlearning</a>, Tutorial on Responsible Vision-Language Generative Models @ ICCV’25</p></li>
+<li><p><a href="https://sites.google.com/view/u-and-me-workshop/">When Unlearning Fails: Probing the Robustness of Machine Unlearning</a>, ICCV Workshop and Challenge on Unlearning and Model Editing, 2025</p></li>
 
-<li><p><a href="https://milcom2025.ieee-milcom.org/program/tutorials">Robust Machine Unlearning: Securing Foundation Models Against Forgetting Failures</a>, IEEE Military Communications Conference, 2025</p></li>
+<li><p><a href="https://mugenworkshop.github.io/">Machine Unlearning for Generative AI: Promises, Pitfalls, and Prospects</a>, ICML Workshop on Machine Unlearning for Generative AI, 2025 </p></li>
 
-<li><p><a href="https://mugenworkshop.github.io/">Machine Unlearning for Generative AI: Promises, Pitfalls, and Prospects</a>, ICML 2025 Workshop on Machine Unlearning for Generative AI</p></li>
+<li><p><a href="https://midwest-ml.org/2025/">Robust Unlearning for Large Language Models</a>, Midwest ML Symposium, 2025</p></li>
+
+<li><p><a href="https://www.continualai.org/services/Seminar/">Robust Unlearning: A Hard but Necessary Goal</a>, ContinualAI Seminar Series, 2025</p></li>
 
 <li><p><a href="https://outshift.cisco.com/blog/efficiency-ai-cisco-research-summit">Memory-Efficient Fine-Tuning for Large Language Models: A Zeroth-Order Optimization Perspective</a>, Cisco Research Efficient AI Summit, 2024</p></li>
 
-<li><p><a href="https://sites.google.com/view/cvpr-2024-tutorial">Machine Unlearning in Computer Vision: Foundations and Applications</a>, CVPR’24</p></li>
+</ul>
+<h2>Tutorials </h2>
+<ul>
+<li><p><a href="https://robust-perception-group.github.io/rvlgm/">Enhancing Generative Model Safety through Machine Unlearning</a>, ICCV 2025 Tutorial on Responsible Vision-Language Generative Models</p></li>
+  
+<li><p><a href="https://milcom2025.ieee-milcom.org/program/tutorials">Robust Machine Unlearning: Securing Foundation Models Against Forgetting Failures</a>, IEEE Military Communications Conference, 2025</p></li>  
 
-<li><p><a href="https://sites.google.com/view/zo-tutorial-aaai-2024/">Zeroth-Order Machine Learning: Fundamental Principles and Emerging Applications in Foundation Models</a>, AAAI’24</p></li>
+<li><p><a href="https://sites.google.com/view/cvpr-2024-tutorial">Machine Unlearning in Computer Vision: Foundations and Applications</a>, CVPR 2024</p></li>
 
-<li><p><a href="https://2023.ieeemlsp.org/tutorials/">Bi-Level Optimization In Signal Processing And Machine Learning: Foundations And Emerging Applications</a>, IEEE MLSP’23 </p>
-</li>
-<li><p><a href="https://sites.google.com/view/cvpr2023red">Reverse Engineering of Deceptions: Foundations and Applications</a>, <i>CVPR&rsquo;23</i></p>
-</li>
-<li><p><a href="https://sites.google.com/view/aaai2023tutorial/home">Bi-level Optimization in Machine Learning: Foundations and Applications</a>, <i>AAAI&rsquo;23</i></p>
-</li>
-<li><p><a href="https://sites.google.com/view/neurips2022-frfm-turotial/home">Foundational Robustness of Foundation Models</a>, <i>NeurIPS&rsquo;22</i></p>
-</li>
-<li><p><a href="https://sites.google.com/umich.edu/cvpr-2020-zoo">Zeroth Order Optimization: Theory and Applications to Deep Learning</a>, <i>CVPR&rsquo;20</i></p>
-</li>
-<li><p><a href="https://sites.google.com/view/adv-robustness-zoopt">Recent Progress in Zeroth Order Optimization and Its Applications to Adversarial Robustness in Data Mining and Machine Learning</a>, <i>KDD&rsquo;19</i></p>
-</li>
+<li><p><a href="https://sites.google.com/view/zo-tutorial-aaai-2024/">Zeroth-Order Machine Learning: Fundamental Principles and Emerging Applications in Foundation Models</a>, AAAI 2024</p></li>
+
+<li><p><a href="https://2023.ieeemlsp.org/tutorials/">Bi-Level Optimization In Signal Processing And Machine Learning: Foundations And Emerging Applications</a>, MLSP 2023 </p> </li>
+
+<li><p><a href="https://sites.google.com/view/cvpr2023red">Reverse Engineering of Deceptions: Foundations and Applications</a>, CVPR 2023 </p></li>
+
+<li><p><a href="https://sites.google.com/view/aaai2023tutorial/home">Bi-level Optimization in Machine Learning: Foundations and Applications</a>, AAAI 2023 </p> </li>
+
+<li><p><a href="https://sites.google.com/view/neurips2022-frfm-turotial/home">Foundational Robustness of Foundation Models</a>, NeurIPS 2022 </p> </li>
+
+<li><p><a href="https://sites.google.com/umich.edu/cvpr-2020-zoo">Zeroth Order Optimization: Theory and Applications to Deep Learning</a>, CVPR 2020 </p></li>
+
+<li><p><a href="https://sites.google.com/view/adv-robustness-zoopt">Recent Progress in Zeroth Order Optimization and Its Applications to Adversarial Robustness in Data Mining and Machine Learning</a>, KDD 2019 </p> </li>
+
 </ul>
 <h2>Organized workshops </h2>
 <ul>
