--- a/talk.html
+++ b/talk.html
@@ -41,6 +41,8 @@
 
 <li><p><a href="https://outshift.cisco.com/blog/efficiency-ai-cisco-research-summit">Memory-Efficient Fine-Tuning for Large Language Models: A Zeroth-Order Optimization Perspective</a>, Cisco Research Efficient AI Summit, 2024</p></li>
 
+<li><p><a href="https://trustml.ubc.ca/events/trustml-workshop-ubc-june-2023">Empowering Machine Unlearning through Model Sparsity</a>, UBC TrustML Workshop, 2023</p></li>
+  
 </ul>
 <h2>Selected Tutorials </h2>
 <ul>
