--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="menu-category">Teaching</div>
 <div class="menu-item"><a href="CSE891.html">CSE891</a></div>
 <div class="menu-category">Others</div>
-<div class="menu-item"><a href="talk.html">Talks & Workshops</a></div>
+<div class="menu-item"><a href="talk.html">Talks</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
